--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A discord bot for learning purposes",
   "main": "main.js",
   "scripts": {
-    "test": "dev"
+    "test": "",
+    "dev": "nodemon"
   },
   "keywords": [
     "discord.js"
@@ -12,6 +13,10 @@
   "author": "jot",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
